--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!-- START JUMBROTON -->
     <section id="home">
       <div class="jumbotron text-center">
-        <img src="gambar/Photo.jpg" width="250" class="rounded-circle img-thumbnail" />
+        <img src="Photo.jpg" width="250" class="rounded-circle img-thumbnail" />
         <h1 class="display-4">Zainudin Kairoty</h1>
         <p class="lead">I am a Student | Math Teacher</p>
         <div class="sosmed">
@@ -64,7 +64,7 @@
                 <div class="row justify-content-center">
                   <div class="col-sm-4 mb-3">
                     <div class="card" style="width: 13rem;">
-                      <img src="gambar/Port 1.png" class="card-img-top" alt="data">
+                      <img src="Port 1.png" class="card-img-top" alt="data">
                       <div class="card-body">
                         <h5 class="card-title">Data Analyst</h5>
                         <a href="https://lookerstudio.google.com/reporting/4f7aaef3-c01c-4dcd-9211-8cfd20ea389d" class="btn btn-primary">View</a>
@@ -73,7 +73,7 @@
                   </div>
                   <div class="col-sm-4 mb-2">
                     <div class="card" style="width: 13rem;">
-                      <img src="gambar/Port 2.png" class="card-img-top" alt="web">
+                      <img src="Port 2.png" class="card-img-top" alt="web">
                       <div class="card-body">
                         <h5 class="card-title">Web Development</h5>
                         <a href="https://fe-jayapura-19-production.up.railway.app/" class="btn btn-primary">View</a>
@@ -82,7 +82,7 @@
                   </div>
                   <div class="col-sm-4 mb-2">
                     <div class="card" style="width: 13rem;">
-                      <img src="gambar/Port 3.png" class="card-img-top" alt="web">
+                      <img src="Port 3.png" class="card-img-top" alt="web">
                       <div class="card-body">
                         <h5 class="card-title">Web Development</h5>
                         <a href="https://sites.google.com/view/spltvkelas10/home" class="btn btn-primary">View</a>
